apps/services/heimdall/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
        app.kubernetes.io/name: heimdall
    spec:
      priorityClassName: high-priority
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:2.7.6
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: heimdall-config
