apps/services/heimdall/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
  - port: 80
    targetPort: 80
    name: http
